--- a/TabHost/src/main/res/layout/tab_bottom.xml
+++ b/TabHost/src/main/res/layout/tab_bottom.xml
@@ -13,8 +13,9 @@
             android:layout_width="fill_parent"
             android:layout_alignParentTop="true"
             android:id="@+id/iv_tab1"
-            android:src="@drawable/ic_launcher"
-            android:layout_height="30dp" />
+            android:src="@drawable/index"
+            android:layout_marginTop="5dp"
+            android:layout_height="25dp" />
         <TextView
             android:layout_width="wrap_content"
             android:text="首页"
@@ -33,8 +34,9 @@
             android:layout_width="fill_parent"
             android:id="@+id/iv_tab2"
             android:layout_alignParentTop="true"
-            android:src="@drawable/ic_launcher"
-            android:layout_height="30dp" />
+            android:src="@drawable/magzine"
+            android:layout_marginTop="5dp"
+            android:layout_height="25dp" />
         <TextView
             android:layout_width="wrap_content"
             android:text="杂志"
@@ -54,8 +56,9 @@
             android:layout_width="fill_parent"
             android:layout_alignParentTop="true"
             android:id="@+id/iv_tab3"
-            android:src="@drawable/ic_launcher"
-            android:layout_height="30dp" />
+            android:src="@drawable/picture"
+            android:layout_marginTop="5dp"
+            android:layout_height="25dp" />
         <TextView
             android:layout_width="wrap_content"
             android:text="新闻"
@@ -75,8 +78,9 @@
             android:id="@+id/iv_tab4"
             android:layout_width="fill_parent"
             android:layout_alignParentTop="true"
-            android:src="@drawable/ic_launcher"
-            android:layout_height="30dp" />
+            android:src="@drawable/me"
+            android:layout_marginTop="5dp"
+            android:layout_height="25dp" />
         <TextView
             android:layout_width="wrap_content"
             android:id="@+id/tv_tab4"
