--- a/TabHost/src/main/res/layout/tab04.xml
+++ b/TabHost/src/main/res/layout/tab04.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical" >
 
     <ImageView
+        android:id="@+id/imageview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:gravity="center"
